--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
+        <a href = './sub_recipes/dazhugansi.html'>DaZhuGansi</a>
     </body>
 </html>
