Add desc, ingredients, and steps for dazhugansi

--- a/sub_recipes/dazhugansi.html
+++ b/sub_recipes/dazhugansi.html
@@ -8,6 +8,25 @@
     </head>
     <body>
         <h1>DaZhuGansi</h1>
-        
+        <img src = '../images/dazhugansi.jpg' alt="An image of Finished DaZhuGansi" width="600" height="400">
+        <h2>Description</h2>
+        <p>DaZhuGanSi (大煮干丝) is a classic Huaiyang dish featuring finely shredded tofu simmered in a rich, flavorful broth made with chicken, ham, and shrimp. This delicately crafted dish emphasizes precision and harmony, offering a silky texture and a light, savory taste.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Firm tofu - 200-300g</li>
+            <li>Cooked Chicken Breast - 50-100g (shredded)</li>
+            <li>Cooked Ham - 50-100g (thin julienne strips)</li>
+            <li>Cooked Shrimp - 50-100g (shelled and deveined)</li>
+            <li>Shiitake Mushrooms - 2-3 (soaked, sliced thinly)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cut the tofu into thin slices</li>
+            <li>Cut ham, chicken and mushrooms into thin slices</li>
+            <li>Boil the water, and then put in the tofu until the water boils again</li>
+            <li>Put the tofu through cold water to detach its original bad tastes</li>
+            <li>Boil the chicken brooth and shrimp, after it boils put in the ham, mushroom, chicken strips, and tofu, cook for around 10 minutes</li>
+            <li>Enjoy!</li>
+        </ol>
     </body>
 </html>
