Add some style to the website

--- a/sub_recipes/dazhugansi.html
+++ b/sub_recipes/dazhugansi.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DaZhuGanSi</title>
+        <link rel = 'stylesheet' href = '../style.css'>
     </head>
     <body>
         <h1>DaZhuGansi</h1>
         <img src = '../images/dazhugansi.jpg' alt="An image of Finished DaZhuGansi" width="600" height="400">
         <h2>Description</h2>
-        <p>DaZhuGanSi (大煮干丝) is a classic Huaiyang dish featuring finely shredded tofu simmered in a rich, flavorful broth made with chicken, ham, and shrimp. This delicately crafted dish emphasizes precision and harmony, offering a silky texture and a light, savory taste.</p>
+        <p class="Description">DaZhuGanSi (大煮干丝) is a classic Huaiyang dish featuring finely shredded tofu simmered in a rich, flavorful broth made with chicken, ham, and shrimp. This delicately crafted dish emphasizes precision and harmony, offering a silky texture and a light, savory taste.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>Firm tofu - 200-300g</li>
