--- a/sub_recipes/lasagna.html
+++ b/sub_recipes/lasagna.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lasagna</title>
+        <link rel = 'stylesheet' href = '../style.css'>
     </head>
     <body>
         <h1>Lasagna</h1>
         <img src = '../images/lasagna.jpg' alt="An image of Finished Lasagna" width="400" height="431">
         <h2>Description</h2>
-        <p>Lasagna is a traditional Italian dish made of layered sheets of pasta interspersed with a variety of savory fillings. It's typically baked in an oven, creating a hearty, rich, and flavorful meal with a golden, bubbling top layer of melted cheese.</p>
+        <p class="Description">Lasagna is a traditional Italian dish made of layered sheets of pasta interspersed with a variety of savory fillings. It's typically baked in an oven, creating a hearty, rich, and flavorful meal with a golden, bubbling top layer of melted cheese.</p>
         <h2>Ingredients</h2>
         <ul>
             <li>2 tablespoon olive oil</li>
